Make the cake prettier

--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <title>Happy Birthday 🎂</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="cake">
-    <div class="candle" id="candles">
-        <div class="flame"></div>
+    <div class="plate"></div>
+    <div class="layer layer-bottom"></div>
+    <div class="layer layer-middle"></div>
+    <div class="layer layer-top"></div>
+    <div class="icing"></div>
+    <div class="drip drip1"></div>
+    <div class="drip drip2"></div>
+    <div class="drip drip3"></div>
+    <div class="candle">
+      <div class="flame"></div>
     </div>
     <div class="message" id="message">
         🎉 Sürpriz! 🎉<br />
