Edit mic page labels

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="permission-card">
         <div class="permission-title">🎤 Mikrofon İzni Gerekli</div>
         <div id="permission-status" class="permission-status">
-            Mumları üfleyebilmek için lütfen mikrofon izni ver.
+            Sürpriz için lütfen mikrofon izni ver.
         </div>
         <button id="permission-btn" class="permission-btn">Mikrofonu Aç</button>
-        <div class="permission-hint">İzin verdikten sonra pasta ekrana gelecek 🎂</div>
+        <div class="permission-hint">İzin verdikten sonra sürpriz ekrana gelecek 😋</div>
     </div>
 </div>
 
