--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
+<div id="star-container"></div>
 <div id="permission-screen" class="permission-screen">
     <div class="permission-card">
         <div class="permission-title"></div>
