--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
     <div class="drip drip1"></div>
     <div class="drip drip2"></div>
     <div class="drip drip3"></div>
-    <div class="candle">
+    <div class="candle candle-1">
+        <div class="flame"></div>
+    </div>
+    <div class="candle candle-2">
+        <div class="flame"></div>
+    </div>
+    <div class="candle candle-3">
         <div class="flame"></div>
     </div>
     <div class="message" id="message"></div>
