Add waiting room for target date

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     </div>
 </div>
 
+<!-- Wait screen (shown if date is not reached yet) -->
+<div id="wait-screen" class="permission-screen" style="display:none;">
+    <div class="permission-card">
+        <div class="permission-title" id="wait-title"></div>
+        <div class="permission-status" id="wait-message" style="font-size: 24px;"></div>
+    </div>
+</div>
+
 <div class="cake" id="cake" style="display:none;">
     <div class="plate"></div>
     <div class="layer layer-bottom"></div>
