--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="permission-card">
         <div class="permission-title" id="wait-title"></div>
         <div class="permission-status" id="wait-message" style="font-size: 24px;"></div>
+        <div id="countdown" class="countdown"></div>
     </div>
 </div>
 
