Add admin priviliges and bring back three candles

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="permission-title" id="wait-title"></div>
         <div class="permission-status" id="wait-message" style="font-size: 24px;"></div>
         <div id="countdown" class="countdown"></div>
+        <div id="admin-trigger"></div>
     </div>
 </div>
 
