Add smoke effect

--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
     <div class="drip drip3"></div>
     <div class="candle candle-1">
         <div class="flame"></div>
+        <div class="smoke"></div>
     </div>
     <div class="candle candle-2">
         <div class="flame"></div>
+        <div class="smoke"></div>
     </div>
     <div class="candle candle-3">
         <div class="flame"></div>
+        <div class="smoke"></div>
     </div>
     <div class="message" id="message"></div>
 </div>
